--- a/Kitodo/src/main/webapp/WEB-INF/templates/baseListView.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/baseListView.xhtml
@@ -14,9 +14,11 @@
 <ui:composition
         template="/WEB-INF/templates/base.xhtml"
         xmlns="http://www.w3.org/1999/xhtml"
+        xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:p="http://primefaces.org/ui">
     <ui:define name="content">
+        <h:outputScript library="js" name="lists.js" target="body"/>
         <p:panel id="listWrapper">
             <p:panel styleClass="content-header">
                 <ui:insert name="contentHeader">
