--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/comment.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/comment.xhtml
@@ -14,8 +14,114 @@
 <ui:composition
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
-        xmlns:p="http://primefaces.org/ui">
+        xmlns:p="http://primefaces.org/ui"
+        xmlns:f="http://xmlns.jcp.org/jsf/core"
+        xmlns:fn="http://xmlns.jcp.org/jsp/jstl/functions">
+
     <p:panel id="commentWrapperPanel" styleClass="wrapperPanel">
-        <h:outputText value="Lorem ipsum"/>
+        <h:form id="commentsBox">
+            <p:panelGrid id="comments" columns="1" rendered="#{not Metadaten.showNewComment}">
+
+                <p:dataTable id="commentsGrid" value="#{Metadaten.wikiField}" var="item"
+                             rendered="#{!empty Metadaten.wikiField}">
+                    <p:column style="width: 100%" rendered="#{item.contains('Red K')}">
+                        <p:outputLabel value="#{msgs.correctionK}" style="color:red;font-weight:bold;"/>
+                        <p:inputTextarea value="#{fn:replace(item,'Red K','')}"
+                                         style="width:100%;"
+                                         readonly="true"/>
+                        <p:commandButton icon="fa fa-check" update="commentsBox"
+                                         title="test" styleClass="right" immediate="true"
+                                         action="#{Metadaten.solveProblem(item)}">
+                        </p:commandButton>
+                    </p:column>
+
+                    <p:column style="width: 100%" rendered="#{item.contains('Orange K')}">
+                        <p:outputLabel value="#{msgs.correctionK}" style="color:orange;font-weight:bold;"/>
+                        <p:inputTextarea value="#{fn:replace(item,'Orange K','')}"
+                                         style="width:100%;"
+                                         readonly="true"/>
+                    </p:column>
+                    <p:column style="width: 100%"
+                              rendered="#{!(item.contains('Red K')) and !(item.contains('Orange K'))}">
+                        <p:inputTextarea value="#{fn:replace(item,'Red K','')}"
+                                         style="width:100%;"
+                                         readonly="true"/>
+                    </p:column>
+                </p:dataTable>
+                <p:column>
+                    <p:commandButton id="newButton" value="#{msgs.newElement}"
+                                     action="#{Metadaten.setShowNewComment(true)}"
+                                     icon="fa fa-plus-circle fa-lg"
+                                     iconPos="right" immediate="true"
+                                     update="commentsBox"/>
+                </p:column>
+            </p:panelGrid>
+            <p:panelGrid id="newComments" columns="1"
+                         rendered="#{(not Metadaten.correctionComment) and (Metadaten.showNewComment)}">
+
+                <p:column style="width: 100%">
+                    <p:outputLabel value="#{msgs.correctionMessage}"
+                                   rendered="#{Metadaten.sizeOfPreviousStepsForProblemReporting > 0}"/>
+                    <p:selectBooleanCheckbox id="korrekturMeldung" value="#{Metadaten.correctionComment}"
+                                             rendered="#{Metadaten.sizeOfPreviousStepsForProblemReporting > 0}"
+                                             immediate="true" style="width: 100%">
+                        <p:ajax event="change" update="commentsBox"/>
+                    </p:selectBooleanCheckbox>
+                </p:column>
+                <p:column style="width: 100%">
+                    <p:outputLabel value="#{msgs.bemerkung}"/>
+                    <p:inputTextarea id="addToWikiField" value="#{Metadaten.addToWikiField}"
+                                     style="width:100%;"/>
+                </p:column>
+                <p:column style="width: 100%">
+                    <p:commandButton value="#{msgs.cancel}" action="#{Metadaten.setShowNewComment(false)}"
+                                     icon="fa fa-times fa-lg" iconPos="right" update="commentsBox"
+                                     styleClass="secondary-button" immediate="true">
+                        <f:actionListener binding="#{Metadaten.setCorrectionComment(false)}"/>
+                    </p:commandButton>
+                    <p:commandButton id="saveNewComment"
+                                     action="#{Metadaten.addToWikiField()}"
+                                     value="#{msgs.save}"
+                                     update="commentsBox"
+                                     icon="fa fa-floppy-o fa-lg"
+                                     iconPos="right" styleClass="primary-button"/>
+                </p:column>
+
+            </p:panelGrid>
+            <p:panelGrid columns="1" rendered="#{(Metadaten.correctionComment) and (Metadaten.showNewComment)}">
+                <p:column style="width: 100%">
+                    <p:outputLabel value="#{msgs.bemerkung}"/>
+                    <p:inputTextarea style="width:100%;"
+                                     value="#{Metadaten.problem.message}">
+                        <p:ajax event="change"/>
+                    </p:inputTextarea>
+                </p:column>
+                <p:column style="width: 100%">
+                    <p:outputLabel value="#{msgs.zurueckZuArbeitsschritt}"/>
+                    <p:selectOneMenu style="width: 100%"
+                                     value="#{Metadaten.problem.id}">
+                        <f:selectItems
+                                value="#{Metadaten.previousStepsForProblemReporting}"
+                                var="step1" itemLabel="#{step1.titleWithUserName}"
+                                itemValue="#{step1.id}"/>
+                        <p:ajax event="change"/>
+                    </p:selectOneMenu>
+                </p:column>
+                <p:column style="width: 100%">
+                    <p:commandButton value="#{msgs.cancel}" action="#{Metadaten.setShowNewComment(false)}"
+                                     icon="fa fa-times fa-lg" iconPos="right" update="commentsBox" immediate="true"
+                                     styleClass="secondary-button">
+                        <f:actionListener binding="#{Metadaten.setCorrectionComment(false)}"/>
+                    </p:commandButton>
+                    <p:commandButton id="sendProblem"
+                                     value="#{msgs.correctionMessageSend}"
+                                     action="#{Metadaten.reportProblem()}"
+                                     title="#{msgs.correctionMessageSend}"
+                                     immediate="true"
+                                     update="commentsBox"/>
+
+                </p:column>
+            </p:panelGrid>
+        </h:form>
     </p:panel>
 </ui:composition>
