--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditPopup.xhtml
@@ -40,7 +40,7 @@
                                            action="#{BenutzerverwaltungForm.addToGroup}"
                                            title="add to user group"
                                            update="editForm:userTabView:usergroupDatatable"
-                                           oncomplete="jQuery('#editForm\\:saveButtonToggler').click()">
+                                           oncomplete="toggleSave()">
                                 <i class="fa fa-user-plus fa-lg"/>
                                 <f:param name="ID" value="#{item.id}"/>
                             </p:commandLink>
