--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
@@ -40,7 +40,7 @@
             </p:commandLink>
             <p:commandLink id="deleteProperty"
                            title="#{msgs.delete}"
-                           oncomplete="jQuery('#editForm\\:saveButtonToggler').click();"
+                           oncomplete="toggleSave()"
                            action="#{ProzessverwaltungForm.deleteProperty}">
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.property}" value="#{item}"/>
