--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
@@ -28,7 +28,7 @@
                              id="orderUp"
                              update="editForm:tabs:taskTable"
                              rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClientOrForProject('editTask',item.process.project.client.id,item.process.project.id)}"
-                             oncomplete="jQuery('#editForm\\:saveButtonToggler').click();"
+                             oncomplete="toggleSave()"
                              icon="fa fa-long-arrow-up" styleClass="ui-button-small">
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.task}" value="#{item}"/>
             </p:commandButton>
@@ -36,7 +36,7 @@
                              id="orderDown"
                              update="editForm:tabs:taskTable"
                              rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClientOrForProject('editTask',item.process.project.client.id,item.process.project.id)}"
-                             oncomplete="jQuery('#editForm\\:saveButtonToggler').click();"
+                             oncomplete="toggleSave()"
                              icon="fa fa-long-arrow-down" styleClass="ui-button-small">
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.task}" value="#{item}"/>
             </p:commandButton>
@@ -59,7 +59,7 @@
                     <p:commandButton action="#{ProzessverwaltungForm.setTaskStatusDown}"
                                      id="taskStatusDown"
                                      title="#{msgs.statusRunterSetzen}"
-                                     oncomplete="jQuery('#editForm\\:saveButtonToggler').click();"
+                                     oncomplete="toggleSave()"
                                      update="statusColumn"
                                      icon="fa fa-long-arrow-left"
                                      styleClass="ui-button-small">
@@ -71,7 +71,7 @@
                     <p:commandButton action="#{ProzessverwaltungForm.setTaskStatusUp}"
                                      id="taskStatusUp"
                                      title="#{msgs.statusHoeherSetzen}"
-                                     oncomplete="jQuery('#editForm\\:saveButtonToggler').click();"
+                                     oncomplete="toggleSave()"
                                      update="statusColumn"
                                      icon="fa fa-long-arrow-right"
                                      styleClass="ui-button-small">
@@ -97,7 +97,7 @@
                            title="#{msgs.delete}"
                            action="#{ProzessverwaltungForm.removeTask}"
                            immediate="true"
-                           oncomplete="jQuery('#editForm\\:saveButtonToggler').click();"
+                           oncomplete="toggleSave()"
                            update="taskTable">
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
                 <f:setPropertyActionListener
