--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceEditPopup.xhtml
@@ -42,7 +42,7 @@
                     <p:commandButton action="#{ProzessverwaltungForm.saveWorkpieceProperty}"
                                      id="save"
                                      update="editForm"
-                                     oncomplete="PF('editWorkpieceDialog').hide();jQuery('#editForm\\:saveButtonToggler').click()"
+                                     oncomplete="PF('editWorkpieceDialog').hide();toggleSave()"
                                      value="#{msgs.apply}"
                                      styleClass="button-filled-blue right">
                         <f:setPropertyActionListener target="#{ProzessverwaltungForm.editMode}"
