--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
@@ -35,7 +35,7 @@
             <p:commandLink id="deleteWorkpieceProperty"
                            title="#{msgs.delete}"
                            action="#{ProzessverwaltungForm.deleteWorkpieceProperty}"
-                           oncomplete="jQuery('#editForm\\:saveButtonToggler').click();"
+                           oncomplete="toggleSave()"
                            update="workpiecePropertyTable">
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.workpieceProperty}" value="#{property}"/>
