--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projectEdit/projectEditDetail.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projectEdit/projectEditDetail.xhtml
@@ -50,7 +50,7 @@
                     <f:selectItem itemLabel="#{msgs.clientNon}" itemValue="noClient"/>
                     <f:selectItems value="#{ProjekteForm.clients}" var="client" itemValue="#{client}"
                                    itemLabel="#{client.name}"/>
-                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectOneMenu>
             </div>
         </p:row>
@@ -58,21 +58,21 @@
             <div>
                 <p:outputLabel for="startdate" value="#{msgs.startDate}" />
                 <p:calendar id="startdate" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.startDate}" showOn="button" disabled="#{ProjekteForm.lockedDetail}">
-                    <p:ajax event="dateSelect" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
-                    <p:ajax event="blur" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="dateSelect" oncomplete="toggleSave()"/>
+                    <p:ajax event="blur" oncomplete="toggleSave()"/>
                 </p:calendar>
             </div>
             <div>
                 <p:outputLabel for="enddate" value="#{msgs.endDate}" />
                 <p:calendar id="enddate" styleClass="input-with-button" value="#{ProjekteForm.myProjekt.endDate}" showOn="button" disabled="#{ProjekteForm.lockedDetail}">
-                    <p:ajax event="dateSelect" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
-                    <p:ajax event="blur" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="dateSelect" oncomplete="toggleSave()"/>
+                    <p:ajax event="blur" oncomplete="toggleSave()"/>
                 </p:calendar>
             </div>
             <div>
                <p:outputLabel for="projectIsActive" value="#{msgs.projectIsActive}" />
                <p:selectBooleanCheckbox id="projectIsActive" class="input" value="#{ProjekteForm.myProjekt.active}" disabled="#{ProjekteForm.lockedDetail}">
-                   <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()" />
+                   <p:ajax event="change" oncomplete="toggleSave()" />
                </p:selectBooleanCheckbox>
             </div>
         </p:row>
