--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditDetails.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditDetails.xhtml
@@ -43,25 +43,25 @@
                     <f:selectItem itemValue="1" itemLabel="#{msgs.statusOffen}"/>
                     <f:selectItem itemValue="2" itemLabel="#{msgs.statusInBearbeitung}"/>
                     <f:selectItem itemValue="3" itemLabel="#{msgs.statusAbgeschlossen}"/>
-                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectOneMenu>
             </div>
             <div>
                 <p:outputLabel for="typeMetaData" value="#{msgs.metadata}"/>
                 <p:selectBooleanCheckbox id="typeMetaData" value="#{ProzessverwaltungForm.task.typeMetadata}" class="input">
-                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectBooleanCheckbox>
             </div>
             <div>
                 <p:outputLabel for="typeImportFileUpload" value="#{msgs.importMittelsFileUpload}"/>
                 <p:selectBooleanCheckbox id="typeImportFileUpload" value="#{ProzessverwaltungForm.task.typeImportFileUpload}" class="input">
-                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectBooleanCheckbox>
             </div>
             <div>
                 <p:outputLabel for="typeImagesRead" value="#{msgs.imagesRead}"/>
                 <p:selectBooleanCheckbox id="typeImagesRead" value="#{ProzessverwaltungForm.task.typeImagesRead}" class="input">
-                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectBooleanCheckbox>
             </div>
         </p:row>
@@ -69,37 +69,37 @@
             <div>
                 <p:outputLabel for="typeImagesWrite" value="#{msgs.imagesWrite}"/>
                 <p:selectBooleanCheckbox id="typeImagesWrite" value="#{ProzessverwaltungForm.task.typeImagesWrite}" class="input">
-                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectBooleanCheckbox>
             </div>
             <div>
                 <p:outputLabel for="typeCloseVerify" value="#{msgs.beimAbschliessenVerifizieren}"/>
                 <p:selectBooleanCheckbox id="typeCloseVerify" value="#{ProzessverwaltungForm.task.typeCloseVerify}" class="input">
-                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectBooleanCheckbox>
             </div>
             <div>
                 <p:outputLabel for="typeExportDMS" value="#{msgs.exportDMS}"/>
                 <p:selectBooleanCheckbox id="typeExportDMS" value="#{ProzessverwaltungForm.task.typeExportDMS}" class="input">
-                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectBooleanCheckbox>
             </div>
             <div>
                 <p:outputLabel for="typeAcceptClose" value="#{msgs.taskCloseByAccept}"/>
                 <p:selectBooleanCheckbox id="typeAcceptClose" value="#{ProzessverwaltungForm.task.typeAcceptClose}" class="input">
-                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectBooleanCheckbox>
             </div>
             <div>
                 <p:outputLabel for="typeAutomatic" value="#{msgs.automaticTask}"/>
                 <p:selectBooleanCheckbox id="typeAutomatic" value="#{ProzessverwaltungForm.task.typeAutomatic}" class="input">
-                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectBooleanCheckbox>
             </div>
             <div>
                 <p:outputLabel for="batchStep" value="#{msgs.batchStep}"/>
                 <p:selectBooleanCheckbox id="batchStep" value="#{ProzessverwaltungForm.task.batchStep}" class="input">
-                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectBooleanCheckbox>
             </div>
         </p:row>
