--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsers.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsers.xhtml
@@ -26,7 +26,7 @@
                            id="deleteUser"
                            title="#{msgs.removeUser}"
                            immediate="true"
-                           oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"
+                           oncomplete="toggleSave()"
                            update="editForm:tabs:userTable">
                 <i class="fa fa-trash-o fa-lg"/>
                 <f:param name="ID" value="#{user.id}"/>
