--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskTemplateEdit/taskEditUsersPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskTemplateEdit/taskEditUsersPopup.xhtml
@@ -37,7 +37,7 @@
                     <p:column headerText="#{msgs.actions}">
                         <p:commandLink id="addUser"
                                        action="#{TemplateForm.addUser}"
-                                       oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"
+                                       oncomplete="toggleSave()"
                                        update="editForm:tabs:userTable">
                             <h:graphicImage alt="add task to user" value="/pages/images/buttons/addUser.gif"/>
                             <f:param name="ID" value="#{user.id}"/>
