--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/taskList.xhtml
@@ -28,7 +28,7 @@
                              id="orderUp"
                              update="editForm:tabs:taskTable"
                              rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClientOrForProject('editTask',item.template.project.client.id,item.template.project.id)}"
-                             oncomplete="jQuery('#editForm\\:saveButtonToggler').click();"
+                             oncomplete="toggleSave()"
                              icon="fa fa-long-arrow-up" styleClass="ui-button-small">
                 <f:setPropertyActionListener target="#{TemplateForm.task}" value="#{item}"/>
             </p:commandButton>
@@ -36,7 +36,7 @@
                              id="orderDown"
                              update="editForm:tabs:taskTable"
                              rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClientOrForProject('editTask',item.template.project.client.id,item.template.project.id)}"
-                             oncomplete="jQuery('#editForm\\:saveButtonToggler').click();"
+                             oncomplete="toggleSave()"
                              icon="fa fa-long-arrow-down" styleClass="ui-button-small">
                 <f:setPropertyActionListener target="#{TemplateForm.task}" value="#{item}"/>
             </p:commandButton>
@@ -62,7 +62,7 @@
                            title="#{msgs.delete}"
                            action="#{TemplateForm.removeTask}"
                            immediate="true"
-                           oncomplete="jQuery('#editForm\\:saveButtonToggler').click();"
+                           oncomplete="toggleSave()"
                            update="taskTable">
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
                 <f:setPropertyActionListener
